--- a/main.css
+++ b/main.css
@@ -116,3 +116,22 @@ tr:nth-child(even) {
     background-color: #e8eaf6;
 }
 
+/*Week 6 Styling*/
+.wk6{
+    font-size: 14px;
+}
+
+
+/* Video Styling */
+video{
+    width: 70%;
+    height: auto;
+    margin-top: 20px;
+}
+
+.vid-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
